Correction des cartes HEBERGEMENT et ajout du FOOTER (VERSION MOBILE TERMINE)

--- a/Mentoring/P2_magnan_benoit/style.css
+++ b/Mentoring/P2_magnan_benoit/style.css
@@ -276,7 +276,7 @@ button p{
 .description {
     position: relative;
     width: 55%;
-    padding: 5%;
+    padding: 20px;
     border-radius: 0 15px 15px 0;
 }
 
@@ -360,9 +360,18 @@ button p{
 /* FOOTER */
 footer {
     background-color: #f2f2f2;
-    padding: 30px;
+    padding: 15px 30px;
 }
 
 footer li {
     padding: 5px 0px;
+}
+
+footer h4 {
+    margin: 15px 0px;
+}
+
+.footerBlock {
+    width: 100%;
+    margin: 10px auto 15px;
 }
